Atulização front Aula e footer

--- a/Views/Cursoes/Aula.cshtml
+++ b/Views/Cursoes/Aula.cshtml
@@ -49,14 +49,14 @@
     }
 
         #sidebar ul li button:hover {
-            color: #7386D5;
-            background: #fff;
+            color: black;
+            background: #f3f3f3;
         }
 
     ul ul button {
         font-size: 0.9em !important;
         padding-left: 30px !important;
-        background: #836FFF;
+        background:     ;
     }
 
 
@@ -67,20 +67,20 @@
     }
 
     #sidebar {
-        min-width: 372px;
-        max-width: 372px;
-        background: #6959CD;
+        min-width: 450px;
+        max-width: 450px;
+        background: #328bcb;
         color: #fff;
         transition: all 0.3s;
     }
 
         #sidebar.active {
-            margin-left: -372px;
+            margin-left: -450px;
         }
 
         #sidebar .sidebar-header {
             padding: 20px;
-            background: #836FFF;
+            background: #328bcb;
         }
 
         #sidebar ul.components {
@@ -110,8 +110,8 @@
     }
 
         #sidebar ul li a:hover {
-            color: #7386D5;
-            background: #fff;
+            color: black;
+            background: #f3f3f3;
         }
 
 
