--- a/Views/Cursoes/Cursos.cshtml
+++ b/Views/Cursoes/Cursos.cshtml
@@ -29,7 +29,7 @@
                     <img src="~/assets/img/Cursos/@item.Url_imagem" class="card-img-top" style="border-radius: 20px 20px 0 0" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">@item.Nome</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <p class="card-text">Curso mais didático e completo de Java e OO. UML, JDBC, JavaFX, Spring Boot, JPA, Hibernate, MySQL, MongoDB e muito mais.</p>
                     </div>
                     <div class="card-footer text-right">
                         @Html.ActionLink("Comece agora!", "Aula", "Cursoes", new { id = item.Id}, new { @class = "btn btn-primary", @role = "button" })
