--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -151,10 +151,10 @@
                         </div>
 
                         <div class="col-lg-4 col-md-6 footer-newsletter">
-                            <h4>Our Newsletter</h4>
-                            <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
+                            <h4>Se inscreva!</h4>
+                            <p>Inscreva-se para receber nossas ofertas e promoções.</p>
                             <form action="" method="post">
-                                <input type="email" name="email"><input type="submit" value="Subscribe">
+                                <input type="email" name="email"><input type="submit" value="Inscrever">
                             </form>
                         </div>
                     </div>
