--- a/Views/Usuarios/Index.cshtml
+++ b/Views/Usuarios/Index.cshtml
@@ -405,7 +405,7 @@
                     <ul class="menu-content">
 
                         <li class="menu-content-item"><a href="#">Continue<br />Estudando</a></li>
-                        <li class="menu-content-item"><a href="#">Meus<br />Cursos</a></li>
+                        <li class="menu-content-item"><a href="~/Usuario_has_curso/MeusCursos">Meus<br />Cursos</a></li>
                         <li class="menu-content-item"><a href="#">Meus<br />Exercícios</a></li>
                         <li class="menu-content-item"><a href="#">Meus<br />Certificados</a></li>
                         <li class="menu-content-item"><a href="#">Plano de<br />Estudos</a></li>
