criação do front da pagina SejaPremium

--- a/Views/Usuarios/Index.cshtml
+++ b/Views/Usuarios/Index.cshtml
@@ -414,7 +414,7 @@
                         <li class="menu-content-item"><a href="#">Histórico de <br />testes</a></li>
                         @if (Model.TiposUsuarios == _30Code.Models.Usuario.TipoUsuario.Comum)
                         {
-                            <li class="menu-content-item menu-content-item-destaque"><a href="#" class="menu-user-assine-topo">Seja Premium</a></li>
+                            <li class="menu-content-item menu-content-item-destaque"><a href="~/Usuarios/SejaPremium" class="menu-user-assine-topo">Seja Premium</a></li>
                         }
                     </ul>
 
@@ -423,12 +423,6 @@
                             <a class="topo-link-minha-conta" href="~/Usuarios/Edit">
                                 Editar Cadastro&nbsp;&nbsp;
                                 <i class="icofont-pen-alt-2"></i>
-                            </a>
-
-
-                            <a class="topo-link-minha-conta btnDetalhes" href="~/Usuarios/Details">
-                                Detalhes&nbsp;&nbsp;
-                                <i class="icofont-attachment"></i>
                             </a>
 
 
