--- a/Views/Cursoes/_Quizz.cshtml
+++ b/Views/Cursoes/_Quizz.cshtml
@@ -1,7 +1,6 @@
 ﻿@model _30Code.Models.ConteudoVM
 
 <style>
-
     #qtext {
         font-size: 18px;
         margin-top: 1.2em;
@@ -62,9 +61,9 @@
             display: none;
         }
 
-    *, *:before, *:after {
+    /**, *:before, *:after {
         box-sizing: inherit;
-    }
+    }*/
 
     .radiocontainer .checkmark:after {
         top: 6px;
