--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -25,6 +25,9 @@
     <link href="~/assets/vendor/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet">
     <link href="~/assets/vendor/aos/aos.css" rel="stylesheet">
 
+    @*VIDEO*@
+    <link href="~/Content/jlplayer.css" rel="stylesheet" />
+
     <!-- Template Main CSS File -->
     <link href="~/assets/css/style.css" rel="stylesheet">
 </head>
@@ -188,6 +191,7 @@
     <script src="~/assets/vendor/owl.carousel/owl.carousel.min.js"></script>
     <script src="~/assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
     <script src="~/assets/vendor/aos/aos.js"></script>
+    <script src="~/Scripts/jlplayer.js"></script>
 
     <!-- Template Main JS File -->
     <script src="~/assets/js/main.js"></script>
